Refactored relationships, doing post interactions